<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="match_parent"
            android:contentDescription="@string/imageinfo"
            android:layout_height="match_parent"
            android:src="@drawable/digital"
            android:scaleType="centerCrop"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/biz"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textSize="35sp"
            android:layout_above="@id/test_view"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:text="@string/name"
            android:textColor="#ffffff"
            android:textSize="35sp"
            android:layout_alignParentBottom="true"
            android:id="@+id/test_view"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/phone"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="3dp"
            android:text="@string/tel"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/email"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="3dp"
            android:text="@string/email"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/location"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="3dp"
            android:text="@string/address"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_action_name"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="3dp"
            android:text="@string/time"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/aboutus"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="3dp"
            android:text="@string/about"
            android:textSize="16sp" />


    </LinearLayout>

</LinearLayout>
</ScrollView>